fullstack-weather-app/weather-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
spec:
  rules:
  - host: weatherapp.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weather-frontend-service
            port: 
              number: 30010
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: weather-backend-service
            port:
              number: 30011
